# prototype-circom-fold

./: .gitignore  .mocharc.json  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  log_input_signals.txt  package-lock.json  package.json  rust-toolchain.toml
.github/: settings.yml
.github/workflows/: ci.yml
circuits/: entry.circom  gmul.circom
circuits/tests/hash/: gmul.test.ts
src/: colin.rs  error.rs  main.rs  tests.rs  utils.rs
