[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""fold a circom circuit"""
edition    ="2021"
name       ="prototype-circom-fold"
repository ="https://github.com/thor314/prototype-circom-fold"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
log       ="0.4" 


[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
env_logger="0.11"
