[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""prototype circom fold with arecibo"""
edition    ="2021"
name       ="prototype-circom-fold"
repository ="https://github.com/thor314/prototype-circom-fold"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
log       ="0.4" 
thiserror="1.0"
env_logger = "0.11"
dotenvy = "0.15" 


[dev-dependencies]
rstest    ="0.23"         # testing convenience proc-macros
