[package]
authors     = ["Thor Kampefner <thorck@pm.me>"]
description = """prototype circom fold with arecibo"""
edition     = "2021"
name        = "prototype-circom-fold"
repository  = "https://github.com/thor314/prototype-circom-fold"
version     = "0.1.0"

[dependencies]
anyhow     = "1.0"
log        = "0.4"
thiserror  = "1.0"
env_logger = "0.11"
dotenvy    = "0.15"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
tracing = "0.1.40"
# tracing-test = "0.2.5"

[dev-dependencies]
rstest = "0.18" # testing convenience proc-macros

# pluto arecibo fork
proving_ground = { git = "https://github.com/pluto/proving_ground", rev = "c58e3c1" }
proofs= { git = "ssh://git@github.com/pluto/web-prover.git", package="proofs" }
tracing-test = "0.2.5"

